kubernetes/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: tautulli
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: k8s-wk-0
      containers:
        - name: tautulli
          image: tautulli/tautulli:v2.16.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8181
              protocol: TCP
          volumeMounts:
            - name: tautulli-config
              mountPath: /config
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: tautulli-config
          persistentVolumeClaim:
            claimName: tautulli-config
