kubernetes/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tautulli
  ports:
    - name: http
      port: 8181
      targetPort: http
      protocol: TCP
