kubernetes/tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: tautulli
spec:
  ingressClassName: nginx
  rules:
    - host: tautulli.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
